Add CameraStatus
