# src/components/express-app/routes/cameras/CameraRouter.ts
@@ -1,3 +1,4 @@
+import { CameraStatus } from "@prisma/client";
 import express, { NextFunction, Response, Router } from "express";
 import { StatusCodes } from "http-status-codes";
 import { inject, injectable } from "inversify";
@@ -101,6 +102,7 @@ export class CameraRouter {
      *      - $ref: '#/components/parameters/SearchCamerasCriteriaDescription'
      *      - $ref: '#/components/parameters/SearchCamerasCriteriaStreamUrl'
      *      - $ref: '#/components/parameters/SearchCamerasCriteriaCarId'
+     *      - $ref: '#/components/parameters/SearchCamerasCriteriaStatus'
      *      - $ref: '#/components/parameters/SearchCamerasCriteriaLimit'
      *      - $ref: '#/components/parameters/SearchCamerasCriteriaOffset'
      *      - $ref: '#/components/parameters/SearchCamerasCriteriaOrderBy'
@@ -132,6 +134,13 @@ export class CameraRouter {
           }
           if (!isEmpty(req.query.carId)) {
             payload = { ...payload, carId: req.query.carId };
+          }
+          if (!isEmpty(req.query.status)) {
+            if (req.query.status === CameraStatus.INACTIVE) {
+              payload = { ...payload, status: CameraStatus.INACTIVE };
+            } else {
+              payload = { ...payload, status: CameraStatus.ACTIVE };
+            }
           }
           if (!isEmpty(req.query.limit)) {
             payload = { ...payload, limit: parseInt(req.query.limit!) };
